--- a/demo/package.json
+++ b/demo/package.json
@@ -14,9 +14,15 @@
   "dependencies": {
     "nativescript-inappbrowser": "file:../src",
     "nativescript-theme-core": "~2.0.24",
+    "nativescript-unit-test-runner": "^0.7.0",
     "tns-core-modules": "~6.5.1"
   },
   "devDependencies": {
+    "@types/jasmine": "3.5.11",
+    "karma": "5.1.1",
+    "karma-jasmine": "3.3.1",
+    "karma-nativescript-launcher": "0.4.0",
+    "karma-webpack": "3.0.5",
     "nativescript-dev-webpack": "~1.5.1",
     "typescript": "~3.8.3"
   },
